--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies and build artifacts
 node_modules
 dist
 dist-ssr
 *.local
+
+# Package manager lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Environment files
+.env
+*.env
 
 # Editor directories and files
 .vscode/*
